Fixed unreadable error message color in dark theme.

--- a/src/Client/wwwroot/styles/mudblazorOverrides.scss
+++ b/src/Client/wwwroot/styles/mudblazorOverrides.scss
@@ -16,3 +16,15 @@
         overflow: auto;
     }
 }
+
+#blazor-error-ui {
+    color: black;
+
+    & > .reload {
+        color: black;
+    }
+
+    & > .dismiss {
+        color: black;
+    }
+}
